# acacia-reads

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: factory.py  graphql.py  health.py  lifespan.py
app/db/: __init__.py  database.py  enumerated_types.py  models.py
app/gql/: mutations.py  queries.py  types.py
app/gql/author/: mutations.py  queries.py  schemas.py
app/gql/book/: mutations.py  queries.py  schemas.py
app/gql/order/: mutations.py  schemas.py
app/gql/user/: mutations.py  queries.py
app/settings/: config.py
app/utils/: utils.py
