[project]
name = "acacia-reads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "graphene>=3.4.3",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "shortuuid>=1.0.13",
    "sqlalchemy>=2.0.43",
]
